--- a/commonjs/index.html
+++ b/commonjs/index.html
@@ -12,6 +12,7 @@
 	<p>Browserify makes Node modules accessible to browser-side code</p>
 	<p>caveat: excluding third-party dependencies is awkward</p>
 
+	<script src="bower_components/jquery/dist/jquery.js"></script>
 	<script src="bundle.js"></script>
 </body>
 
