--- a/amd/index.html
+++ b/amd/index.html
@@ -11,7 +11,7 @@
 	<p>Asynchronous Module Definition</p>
 	<p>e.g. <a href="http://requirejs.org">RequireJS</a></p>
 	<p>dependencies loaded lazily, on demand by default</p>
-	<p>can also be pre-packed</p>
+	<p>can also be pre-compiled</p>
 
 	<script src="bower_components/requirejs/require.js"></script>
 	<script src="main.js"></script>
